# pangu-crawler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  W1-summary.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
crawler-core/: README.md  pyproject.toml
crawler-core/examples/: test_fetch.py
crawler-core/src/pangu_crawler/: __init__.py  cli.py  config.py  errors.py  fetcher.py  parser.py
crawler-core/tests/: test_cli.py  test_errors.py  test_fetcher.py  test_parser.py
docs/: API.md  BASELINE.md  C-integration-design.md  DEV.md  PANGU-INTEGRATION.md  PANGU-MCP-INTEGRATION-DESIGN.md  TESTING.md
examples/: test_urls.txt
mcp-server/: .env.example  config.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
mcp-server/src/: config.ts  crawler_client.ts  index.ts  logger.ts  server.ts
mcp-server/src/tools/: web_fetch.ts
mcp-server/tests/: config.test.ts  crawler_client.test.ts  crawler_client_spawn.test.ts  e2e.test.ts  index.test.ts  server.test.ts  web_fetch.test.ts
scripts/: start-mcp.sh  start.bat  start.ps1  start.sh  test.sh
