[project]
name = "pangu-crawler"
version = "0.1.0"
description = "盘古自研爬虫能力 - Python crawler core"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hermes Agent", email = "hermes@phoenix7956.local" },
]
keywords = [
    "web-scraping",
    "mcp",
    "pangu",
    "ai-agent",
]

dependencies = [
    # W1 阶段只装 parser（W2 才用 curl_cffi/playwright，先 optional）
    "readability-lxml>=0.8.1",
    "html2text>=2024.2.26",
    "loguru>=0.7.2",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
# W2 阶段：实抓需要
w2 = [
    "curl-cffi>=0.7.1",
    "playwright>=1.47.0",
    "tenacity>=9.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pangu-crawler = "pangu_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pangu_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
