[project]
name = "pangu-crawler"
version = "0.1.0"
description = "盘古自研爬虫能力 - Python crawler core"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pangu-MCP Team", email = "team@pangu-mcp.org" },
]
keywords = [
    "web-scraping",
    "mcp",
    "pangu",
    "ai-agent",
]

dependencies = [
    # W1 阶段核心 deps（mock 抓取 + 内容提取）
    "loguru>=0.7.2",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
# 内容提取（W1 阶段要跑 parser 测试）
parser = [
    "readability-lxml>=0.8.1",
    "html2text>=2024.2.26",
]
# W2 阶段：实抓需要
w2 = [
    "curl-cffi>=0.7.1",
    "playwright>=1.47.0",
    "tenacity>=9.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pangu-crawler = "pangu_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pangu_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
